--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "php": ">=8.1"
   },
   "require-dev": {
+    "phpstan/phpstan": "^2.1",
     "phpunit/phpunit": "^10.0.0"
   },
   "autoload-dev": {
@@ -21,5 +22,8 @@
   },
   "scripts": {
     "test": "phpunit"
+  },
+  "config": {
+    "sort-packages": true
   }
 }
