--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Lint
 
 on: [push, pull_request]
 
@@ -18,5 +18,5 @@ jobs:
     - name: Install dependencies
       run: composer install
 
-    - name: Run tests
-      run: composer test
+    - name: Run lint
+      run: composer lint
