--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,17 +6,33 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        php-version:
+          - "8.1"
+          - "8.2"
+          - "8.3"
+          - "8.4"
+        prefer-lowest:
+          - true
+          - false
+
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up PHP with Composer
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.1'
+        php-version: ${{ matrix.php-version }}
         tools: composer
 
     - name: Install dependencies
-      run: composer install
+      run: |
+        if [ "${{ matrix.prefer-lowest }}" == "true" ]; then
+          composer update --no-interaction --no-progress --prefer-lowest
+        else
+          composer install --no-interaction --no-progress
+        fi
 
     - name: Run tests
       run: composer test
